--- a/templates/admin_header.htm
+++ b/templates/admin_header.htm
@@ -90,7 +90,7 @@ mm_menu_0311194645_0.writeMenus();
 				<li><a href="/titlesandcontent?page=1">Titles & Content</a></li>
 			</ul>
 		</li>
-		<li><a href="/acrm?pageid=1&status=1">Support</a>
+		<li><a href="/acrm?page=1&status=1">Support</a>
 			<ul style="*margin-left:48px;">
 				<li><a href="/acrm?page=1&status=2">In Process</a></li>
 				<li><a href="/acrm?page=1&status=3">On Hold</a></li>
