--- a/templates/header.htm
+++ b/templates/header.htm
@@ -56,7 +56,7 @@ Shipping Rates</div>
 <li><a href="orderstatus.htm">Order Status</a></li>
 <li><a href="shippingstatus.htm">Shipping Status</a></li>
 <li><a href="returnclaims.htm">Return Claims</a></li>
-<li><a href="wishlist.htm">Wish List</a></li>
+<li><a href="/mywishlist">Wish List</a></li>
 <li><a href="/logout">Logout</a></li>
 </ul>
 </li>
