--- a/misc/css/style.css
+++ b/misc/css/style.css
@@ -29,7 +29,6 @@ input[type="text"]{
  margin-bottom:8px;
 }
 label{ float:left; width:26%; text-align:right; padding-right:5px;}
-.clr{ clear:both; width:100%;}
 .float_left{ float:left;}
 .float_right{ float:right;}
 #wrapper{ width:100%; height:auto; margin:0 auto; }
@@ -58,16 +57,16 @@ color:#434343;
 	padding:5px 15px;
 	font-family: 'Open Sans', sans-serif;	
 	font-size:15px;
-	color:#434343;
+	color:#ffffff;
 	text-transform:capitalize;
 	border:1px solid #dddddd;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
 	background-color:#efefef;
-	background: -webkit-gradient(linear, left top, left bottom, from(#efefef), to(#ffffff));
-	background: -moz-linear-gradient(top,  #efefef,  #ffffff);
-	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#ffffff');
+	background: -webkit-gradient(linear, left top, left bottom, from(#00add8), to(#0587bb));
+	background: -moz-linear-gradient(top,  #00add8,  #0587bb);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#00add8', endColorstr='#0587bb');
 	background-repeat:repeat;
 	text-align:center;	
 	margin:0px 10px;
@@ -77,7 +76,7 @@ color:#434343;
 	width:auto;
 	padding:5px 15px;
 	font-family: 'Open Sans', sans-serif;	
-	font-size:15px;
+	font-size:17px;
 	color:#3c9bd1;
 	text-transform:capitalize;
 	border:1px solid #3c9bd1;
@@ -89,9 +88,11 @@ color:#434343;
 	background: -moz-linear-gradient(top,  #efefef,  #ffffff);
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#ffffff');
 	background-repeat:repeat;
-	text-align:center;	
-	margin:0px 10px;
-}
+	text-align:left;	
+	margin:15px 10px;
+	width:200px;
+	font-weight:bold;
+	}
 /* //Fedex section */
 
 /* Checkout Login section */
@@ -101,7 +102,7 @@ color:#434343;
 .login_heading{
 font-family: 'Open Sans', sans-serif;
 font-size:20px;
-font-weight:500;	
+font-weight:bold;	
 color:#3c9bd1;
 padding-bottom:10px;
 }
@@ -207,12 +208,24 @@ height:auto;
 }
 .button_top{ clear:both; padding-top:23px;}
 .button_top .button { clear:both; float:right; margin:2px 0px; text-transform:uppercase;}
+.slide_left{
+	background-image: url(images/new-price-left.jpg);
+	background-repeat: no-repeat;
+	background-position: left center;
+}
+.slide_right{
+	background-image: url(images/new-price-right.jpg);
+	background-repeat: no-repeat;
+	background-position: right center;
+}
 .slide_top{
-clear:both;
-background-color:#d7d7d7;
-width:100%;
-padding-top:2px;
-padding-bottom:1px;
+	clear:both;
+	width:100%;
+	padding-top:2px;
+	padding-bottom:1px;
+	background-image: url(images//cart-bg.jpg);
+	background-repeat: no-repeat;
+	background-position: left top;
 }
 .slide_middle{
 	width:654px; 
@@ -233,4 +246,63 @@ font-weight:700;
 line-height:20px;	
 color:#235478;
 }
+
+.button-latest a{
+	float:left;
+	width:250px;
+	padding:5px 15px;
+	font-family: 'Open Sans', sans-serif;
+	font-weight:bold;	
+	font-size:15px;
+	color:#434343;
+	text-transform:capitalize;
+	border:1px solid #dddddd;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	background-color:#efefef;
+	background: -webkit-gradient(linear, left top, left bottom, from(#efefef), to(#ffffff));
+	background: -moz-linear-gradient(top,  #efefef,  #ffffff);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#ffffff');
+	background-repeat:repeat;
+	text-align:center;	
+	margin:0px 10px;
+	
+}
+.button1-latest a{
+	float:left;
+	width:250px;
+	padding:5px 15px;
+	font-family: 'Open Sans', sans-serif;	
+		font-weight:bold;
+	font-size:15px;
+	color:#3c9bd1;
+	text-transform:capitalize;
+	border:1px solid #3c9bd1;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	background-color:#efefef;
+	background: -webkit-gradient(linear, left top, left bottom, from(#efefef), to(#ffffff));
+	background: -moz-linear-gradient(top,  #efefef,  #ffffff);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#efefef', endColorstr='#ffffff');
+	background-repeat:repeat;
+	text-align:center;	
+	margin:0px 10px;
+}
+
+.login_left .button-latest{ float:right; margin-top:10px;}
+.login_right .button-latest{ float:left; margin-top:61px;}
+.button1-latest a:link{ color:#3c9bd1; text-decoration:none; }
+.button1-latest a:visited{ color:#3c9bd1; text-decoration:none;}
+.button1-latest  a:hover { color:#3c9bd1; text-decoration:none; }
+.button1-latest a:active{ color:#3c9bd1; text-decoration:none;}
+
+.price-final{
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:16px;
+	color:#ef4a00;
+	font-weight:700;	
+}
+
 /* //add to cart section */ 
