--- a/templates/category.htm
+++ b/templates/category.htm
@@ -1,43 +1,39 @@
-{% include 'header.htm' %}
-
-<link href="/misc/css3/style.css" rel="stylesheet" type="text/css" />
-<link href="/misc/css3/style.css" rel="stylesheet" type="text/css" />
-
+ {% include 'header.htm' %}
 {% load tagsfilter %}
-<div  class="gray-back-new">
-<div class="width8 float-left">&nbsp;</div>
+
+<link type="text/css" rel="stylesheet" href="/misc/sty.css" />
+ <link type="text/css" rel="stylesheet" href="/misc/category.css" />
+
+ {% include 'myaccount_widget.htm' %}
  
-<div class="height12 clr"></div>
- 
-   
-<div id="wrapper padleft20" align=left>
-<div class="container padleft20" align=left >
+<div class="float-left wid20">&nbsp;&nbsp;</div>
+<div class="float-left wid725">
 <div class="clr">
-<div class="home-txt padleft20  padbottom20"><a href="#">Home</a> > <a href="#">{{cat.category_name}} </a></div>
+<div class="clr pad-tb product-align1 marleft10 master-link"><a href="/">Home</a> > <a href="#" class="master-link">Marine Life </a> > <a href="/category?id={{cat.category_parent}}">Saltwater Fish </a> > <a href="/category?id={{cat.id}}">{{cat.category_name}} </a></div>
 <div class="clr">
-<div class="button"><a href="#">{{cat.category_name}}</a></div>
+<div class="button"><a href="/category?id={{cat.id}}">{{cat.category_name}} </a></div>
 </div>
-<div class="clr pad-tb">
- {{cat.category_header|safe}}
+<div class="clr pad-tb marleft10" align="justify">
+<p>{{cat.category_header|safe}}</p>
 </div>
 <div class="clr">
 <div class="button"><a href="#">Featured Products</a></div>
 </div>
-
 <div class="clr padtop20 padbottom20">
 <div class="clr">
+
 {% for products in cat.id|productsdisplay %}
 	 {% if products.categoryspecial >= 1 %}
-		<div class="float_left orange_box " align="center">
+		<div class="float_left orange_boxs " align="center" style="width:26% !important;min-height:266px !important;">
 		<div class="clr product_heading product-align">{{ products.name }}</div>
 		<div class="clr product-align">{{ products.description }}</div>
-		<div class="clr pad-tb"><span class="clr pad-tb"><img src="misc/images/category_img1.jpg" width="125" height="125" /></span></div>
+		<div class="clr pad-tb"><span class="clr pad-tb"><img src="{{ products.thumbnail }}" width="125" height="125" /></span></div>
 		<div class="clr "><strong>Sale:&nbsp;</strong><span class="line-through">$199.99&nbsp;</span><strong class="orange_text">&nbsp;${{products.price|floatformat:2}}</strong></div>
-		<div class="clr pad-tb">
+		<div class="clr pad-tb" style="width:200px !important">
 				{% if products.stock >= 1 %}
 					<div class="blue-button"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
-					<div class="wish-button"><a href="/addtocart?item_id={{ products.catalogid }}">WISH LIST</a></div>
+					<div class="wish-button"><a href="/addtowatchlist?itemid={{ products.catalogid }}">WISH LIST</a></div>
 				{% endif %}
 		<div class="hash-button"><a href="#">more details...</a></div>
 		</div>
@@ -45,49 +41,53 @@
 	{% endif %}
 {% endfor %}
 
- 
+
+
+
+
 
 </div>
 <div class="clr"></div>
 </div>
+</div>
+<div class="clr wid748" align="left"><div class="heading_bg1" align="center">{{cat.id|productsdisplay|length}} {{cat.category_name}}</div></div>
 
-<div class="clr"><div class="heading_bg">{{cat.id|productsdisplay|length}} {{cat.category_name}}</div></div>
 <div class="clr padtop20 padbottom20">
 <div class="clr">
+
 {% for products in cat.id|productsdisplay %}
-<div class="float_left blue_box" align="center">
-<div class="clr product_heading product-align">{{ products.name|slice:":27" }}..</div>
+<div class="float_left blue_boxs" align="center"  style="width:26% !important;min-height:266px !important;">
+<div class="clr product_heading product-align">{{ products.name }}</div>
 <div class="clr pad-tb product-align">{{ products.description }}&nbsp;</div>
 <div class="clr pad-tb"><span class="clr pad-tb"><img src="{{ products.thumbnail }}" width="125" height="125" /></span></div>
 <div class="clr "><strong>Sale:&nbsp;</strong><strong class="orange_text">&nbsp;${{products.price|floatformat:2}}</strong></div>
-<div class="clr pad-tb">
+<div class="clr pad-tb" style="width:200px !important">
 				{% if products.stock >= 1 %}
 					<div class="blue-button"><a href="/addtocart?item_id={{ products.catalogid }}">Add to Tank</a></div>
 				{% else %}
-					<div class="wish-button"><a href="/addtocart?item_id={{ products.catalogid }}">WISH LIST</a></div>
+					<div class="wish-button"><a href="/addtowatchlist?itemid={{ products.catalogid }}">WISH LIST</a></div>
 				{% endif %}
  <div class="hash-button"><a href="#">more details...</a></div>
 </div>
 </div>
 {% endfor %}
- 
- 
- 
- 
- 
+
  
  
  
 
  
  
+ 
+
+ <div class="clr"></div>
+</div>
+
+ 
+
 
 </div>
-
-</div>
-</div>
-</div></div> 
-<div class="float-left width10"></div>
+<div class="float-left"></div>
 
 </div>
 {% include 'footer.htm' %}
