--- a/templates/product_article_edit.htm
+++ b/templates/product_article_edit.htm
@@ -10,17 +10,17 @@
 <div style="clear:both" class="white-bg"><div style="clear:both; padding-bottom:10px" class="content-bg"><table width="100%" border="0">
   <tr>
     <td align="left" valign="top"  style="padding-left:10px" class="left-text">
-	{% include 'left_menu_cms.htm' %}
+	{% include 'lef_menu_products.htm' %}
 </td>
     <td style="width:1px; background-color:#d9d9d9; background-repeat:repeat-y"></td>
     <td>
 	<table width="100%" border="0">
   <tr>
-    <td class="left-text" style="padding-top:10px;">CMS > Pages > Edit</td>
+    <td class="left-text" style="padding-top:10px;">Product > Article > Edit</td>
   </tr>
   <tr>
     <td style="padding-bottom:10px; padding-top:10px;">
-	<div style="float:left" class="left-text1">Edit Page</div>
+	<div style="float:left" class="left-text1">Edit Article</div>
 	<div style="float:right; margin-right:15px">
 <div class="search1">
 <div style="float:left; width:230px;"><input name="Input" type="text"  placeholder="Search saltwaterfish.com"/></div>
