--- a/templates/ViewCart.html
+++ b/templates/ViewCart.html
@@ -9,7 +9,7 @@
 <div class="float-left wid748">
  
 <div class="toggle_left2 border">
-{% for item in MyCart %}
+{% for item in MyCartItems %}
 <div class="clr">
 <div class="view_cart_heading carttop-bg">
 <div class="clr card2_100">
