--- a/templates/productedit.htm
+++ b/templates/productedit.htm
@@ -4,7 +4,7 @@
     <link href="/misc/tabcontent1.css" rel="stylesheet" type="text/css" />
 <div style="clear:both" class="white-bg"><div style="clear:both; padding-bottom:10px" class="content-bg"><table width="100%" border="0">
   <tr>
-    <td align="left" valign="top" width="130" style="padding-left:20px" class="left-text">{% include 'lef_menu_products.htm' %}</td>
+    <td align="left" valign="top" width="130" style="padding-left:0px" class="left-text">{% include 'lef_menu_products.htm' %}</td>
     <td style="width:1px; background-color:#d9d9d9; background-repeat:repeat-y"></td>
     <td>
 	<table width="100%" border="0">
@@ -16,7 +16,7 @@
 	<div style="float:left" class="left-text1">View/Edit</div>
 	<div style="float:right; margin-right:15px">
 <div class="search1">
-<div style="float:left; width:230px;"><input name="Input" type="text"  placeholder="Search saltwaterfish.com"/></div>
+<div style="float:left; width:200px;"><input name="Input" type="text"  placeholder="Search saltwaterfish.com"/></div>
 <div style="float:left; width:69px;"><input type="submit" name="Submit"  value="Search" /></div>
 </div>
 </div>	</td>
@@ -33,10 +33,10 @@
 
 
 <div class="clr" style="margin-top:0px;">
-<div class="product_edit_txt" style="float:left; margin-bottom:10px;width:650px;">{{allitems.name}}</div>
+<div class="product_edit_txt" style="float:left; margin-bottom:10px;width:600px;">{{allitems.name}}</div>
 <div class="gray_btn" style="float:left; width:96px; height:21px; text-align:center; padding-top:3px;"><img src="/misc/images/x_symbol.png"  style="float:left; padding-left:10px;"/>Delete</div>
 <div style="float:left; width:10px;">&nbsp;</div>
-<div class="gray_btn" style="float:left; width:86px; height:21px; text-align:center; padding-top:3px;"><img src="/misc/images/right_symbol.png"  style="float:left; padding-left:10px;"/>Save</div>
+<div class="gray_btn" style="float:left; width:86px; height:21px; text-align:center; padding-top:3px;"><input type=image src="/misc/images/right_symbol.png"  style="float:left; padding-left:10px;" class="gray_btn"/>Save</div>
 </div>
 <div class="clr" style="background-color:#dddddd; height:4px;"></div>
 <ul class="tabs1"  >
