--- a/templates/products_review_view_list.htm
+++ b/templates/products_review_view_list.htm
@@ -2,16 +2,7 @@
  
 <div style="clear:both" class="white-bg"><div style="clear:both; padding-bottom:10px" class="content-bg"><table width="100%" border="0">
   <tr>
-    <td align="left" valign="top" width="130" style="padding-left:20px" class="left-text"><span class="left-text1">Products</span><br />
-<br />
- <a href="/products?page=1">View/Edit</a><br />
-        Add New<br />
-        Bundles<br />
-        <a href="/categories?page=1">Categories</a><br />
-        Inventtory<br />
-        <a href="/product_wish_list?page=1">Wish List</a><br />
-         <a href="/all_product_reviews?page=1">Reviews</a><br />
-        Import/Export</td>
+    <td align="left" valign="top" width="130" style="padding-left:0px" class="left-text">{% include 'lef_menu_products.htm' %}</td>
     <td style="width:1px; background-color:#d9d9d9; background-repeat:repeat-y"></td>
     <td>
 	<table width="100%" border="0">
