--- a/templates/quick_list.htm
+++ b/templates/quick_list.htm
@@ -30,7 +30,7 @@ Home <span class="home-txt-arrow">&gt; </span>Marine Life     </div>
 	<div> <table width="100%" border="0" cellspacing="0" cellpadding="10" class="table-bg" >
 		{% for products in cat|productsdisplay %}
 			  <tr>
-				<td width="336" class="table-text"><a href="/product?pid={{ products.catalogid }}">{{ products.name }}</a></td>
+				<td width="276" class="table-text1"><a href="/product?pid={{ products.catalogid }}">{{ products.name }}</a></td>
 				<td width="207">
 				{% if products.onsale == 1 %}
 					<img src="/misc/images/quick-sale-img.png" width="33" height="21" border="0"  />
@@ -69,7 +69,7 @@ Home <span class="home-txt-arrow">&gt; </span>Marine Life     </div>
 
 		{% for products in cats.id|productsdisplay %}
 			  <tr>
-				<td width="336" class="table-text"><a href="/product?pid={{ products.catalogid }}">{{ products.name }}</a></td>
+				<td width="276" class="table-text1"><a href="/product?pid={{ products.catalogid }}">{{ products.name }}</a></td>
 				<td width="187">
 				{% if products.onsale == 1 %}
 					<img src="/misc/images/quick-sale-img.png" width="33" height="21" border="0"  />
