--- a/templates/registration.htm
+++ b/templates/registration.htm
@@ -3,10 +3,21 @@
 <script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
 <script type="text/javascript">
 $(function() {
-   $( "#form" ).validate({
+   $( "#regform" ).validate({
            rules: FORM_RULES,
 		   messages: FORM_MESSAGES
    });
+
+   $( "#regform"  ).submit(function() {
+      var thisform = $('#regform');
+	  if (thisform.valid()) 
+        return true;
+      else
+	  {
+         alert("Please give valid data in the mandatory fields.");
+	  }
+      return false;
+     });
 });
 
 
@@ -151,21 +162,15 @@ Resources
 <div class="wid748 float-left">
 <div class="height12 clr"></div>
 <div  class="content-bg1 "  style="min-height:400px !important;font-size:14px;">
-   <div class="blue-bg-header " style="width:100% !important;font-size:14px;">
+<div class="blue-bg-header " style="width:100% !important;font-size:14px;">
 Registration Form
 </div>
-
-{{ field }}
-{% if field.errors %}
-{# NOTE: must use id_NAME for jquery.validation to overwrite error label #}
-<label class='error' for='id_{{ field.name }}' generated="true">{{ field.errors|join:". " }}</label>
-{% endif %}
-<form method="POST" action="/registeruser" name="form" id="form">
+<form method="POST" action="/registeruser" name="regform" id="regform">
 {% csrf_token %} 
   <table border="0"  cellpadding="3" cellspacing="1" style="width:75% !important;font-size:14px;" align=center>
   <tr>
     <td colspan="2">{% if message or error_message %}
-      <p class="style5">{{ message }} <span class="style8 style1">{{ error_message }}</span></p>
+      <p class="greentext">{{ message }} <span class="redtext">{{ error_message }}</span></p>
       {% endif %}</td></tr>
   <tr bgcolor="#FFFFFF"><td width="68"><span class="style4">EMail</span></td>
   <td width="435"><span class="style4">{{ form.email }} </span></td>
